# ai-platform

ai-platform-api/: .dockerignore  .gitignore  Dockerfile  Pipfile  main.py  pyproject.toml  requirements.txt  vercel.json
ai-platform-api/routers/: gemini.py  groq.py  llm.py  prompts.py  sql.py
ai-platform-api/schemas/: llm_schemas.py
ai-platform-api/utils/: env_utils.py  germini_utils.py  groq_utils.py  sql_alchemy_utils.py
ai-platform-ui/: .gitignore  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ai-platform-ui/src/: App.tsx  AppTheme.ts  index.css  index.tsx
ai-platform-ui/src/apis/: llm.ts  prompts.ts
ai-platform-ui/src/components/App/: AppLayout.tsx  AppMarkdown.tsx  AppThemeToggle.tsx
ai-platform-ui/src/components/Chat/: ChatMessages.tsx
ai-platform-ui/src/components/Dialog/: SavePromptDialog.tsx
ai-platform-ui/src/components/shadcn/ui/: accordion.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  popover.tsx  scroll-area.tsx  select.tsx  separator.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
ai-platform-ui/src/contexts/: ui-theme.tsx
ai-platform-ui/src/libs/: apiClient.ts  reactQuery.ts
ai-platform-ui/src/pages/: ChatPlayground.tsx  Home.tsx  NewsEditor.tsx
ai-platform-ui/src/router/: routes.tsx
ai-platform-ui/src/store/: chatSlice.ts  store.ts
ai-platform-ui/src/types/: chat.tsx  llm.ts
ai-platform-ui/src/utils/: util.ts
